--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body{
   background: #343a40;
 }
 
+/*lista com os nomes */
+tr {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+}
+
 .container-geral {
   width: 100%;
   height: 100vh;
@@ -19,6 +26,8 @@ body{
 .titulo-lista{
   display: flex;
   color: #dee2e6;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .btn-titulo{
