--- a/style.css
+++ b/style.css
@@ -8,11 +8,7 @@ body{
 }
 
 /*lista com os nomes */
-tr {
-  display: flex;
-  gap: 2rem;
-  justify-content: space-between;
-}
+
 
 .container-geral {
   width: 100%;
@@ -99,7 +95,6 @@ tr {
 
 .btn-form{
   border: none;
-  background: white;
   padding: 5px 5px;
   border: none;
   border-radius: 20px;
@@ -107,6 +102,9 @@ tr {
 }
 
 /*estilização da lista e valores dentro dela*/
+section {
+    margin-top: 1rem;
+}
 #listaTudo{
 	color: white;
 }
